<?php die(); ?>
Akeeba Panopticon 1.1.1
================================================================================
# [LOW] Extraneous slash in mail messages' `[URL]` variable [gh-519]

Akeeba Panopticon 1.1.0
================================================================================
+ Dashboard layout for Sites Overview [gh-395]
+ Scheduled Site Action Report Emails [gh-303]
+ Basic uptime monitoring [gh-491]
+ Plugin system
+ SSL/TLS certificate information display, and sending expiration warning emails [gh-397]
+ Select language in Setup [gh-384]
+ Change the rotated log names [gh-398]
+ Report latest backup status [gh-396]
+ Support for site favicons
+ Preload hints, and HTTP 103 Early Hints [gh-458]
+ Language selection after logging in [gh-490]
+ Additional colour themes (CSS) and easier theme selection
+ Access a site's logs and tasks directly from the Site Information page
~ Running `composer install` will now always create the `version.php` file
~ Don't show backup and scanner scheduling buttons unless corresponding software installed [gh-413]
~ More accessible ID column labels [gh-446]
# [HIGH] The Joomla! Update state could appear to be inconsistent
# [HIGH] Users should not be able to be copied [gh-481]
# [MEDIUM] Sending emails with the default language results in untranslated variables
# [LOW] PHP error when the browser returns invalid data during WebAuthn [gh-406]
# [LOW] TinyMCE content always dark [gh-410]
# [LOW] Backup not Pro when extension not installed [gh-414]
# [LOW] Date/time parsing on reports view [gh-419]
# [LOW] MFA method setup has non-functional toolbar buttons [gh-468]
# [LOW] Filtering the log files by site name did not work consistently

Akeeba Panopticon 1.0.7
================================================================================
# [HIGH] Error when your PHP version is out of date [gh-392]
# [HIGH] “You do not seem to have Akeeba Backup Professional installed.” viewing some sites

Akeeba Panopticon 1.0.6