@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba Panopticon 1.1.1
 ================================================================================
+# [HIGH] Tasks would be picked up by multiple task runners running in parallel (MySQL race condition)
 # [LOW] Extraneous slash in mail messages' `[URL]` variable [gh-519]
 
 Akeeba Panopticon 1.1.0
